--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
 
 <!-- main -->
 <div class="container">
-	<h1>Cigarette After sex</h1>
-	<div class="songList"></div>
+	
+	<div class="songList">
+<h1>Cigarette After sex</h1>
+<div class="songItem">
+	<img src="images/app.jpg" alt="" srcset="" style="height: 300px; width: 350px;">
+	<span>Apocalypse </span>
+	<span class="songListPlay"> <span>5.25</span><img src="icons/play_circle_filled_white_24dp.svg" alt=""></span>
+</div>
+	</div>
 	<div class="songBanner"></div>
 </div>
 
