front end completed

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 	<div class="songList">
 <h1>Cigarette After sex</h1>
 <div class="songItem">
-	<img src="images/app.jpg" alt="" srcset="" style="height: 300px; width: 350px;">
+	<img src="images/app.jpg" alt="" srcset="" >
 	<span>Apocalypse </span>
-	<span class="songListPlay"> <span>5.25</span><img src="icons/play_circle_filled_white_24dp.svg" alt=""></span>
+	<span class="songListPlay"> <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt=""></span>
 </div>
 	</div>
 	<div class="songBanner"></div>
@@ -42,6 +42,9 @@
  <img src="icons/skip_next_FILL0_wght400_GRAD0_opsz48.svg" alt="">
 
 
+	</div>
+	<div class="songInfo">
+		  <img src="./images/playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Apocalypse</span>
 	</div>
 </div>
 
