--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="icons">
 		<!-- icons -->
  <img src="icons/skip_previous_FILL0_wght400_GRAD0_opsz48.svg" alt="">
- <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+ <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt="" id="masterPlay">
  <img src="icons/skip_next_FILL0_wght400_GRAD0_opsz48.svg" alt="">
 
 
