--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
 	<title>spotify clone</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 	<!-- nav -->
 	<nav>
@@ -18,36 +20,39 @@
 	</nav>
 
 
-<!-- main -->
-<div class="container">
-	
-	<div class="songList">
-<h1>Cigarette After sex</h1>
-<div class="songItem">
-	<img src="images/app.jpg" alt="" srcset="" >
-	<span>Apocalypse </span>
-	<span class="songListPlay"> <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt=""></span>
-</div>
+	<!-- main -->
+	<div class="container">
+
+		<div class="songList">
+			<h1>Cigarette After sex</h1>
+			<div class="songItem">
+				<img src="images/app.jpg" alt="" srcset="">
+				<span>Apocalypse </span>
+				<span class="songListPlay"> <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg"
+						alt=""></span>
+			</div>
+		</div>
+		<div class="songBanner"></div>
 	</div>
-	<div class="songBanner"></div>
-</div>
 
-<div class="bottom">
+	<div class="bottom">
 
-	<input type="range" name="range" id="progressBar" min="0" max="100" >
-	<div class="icons">
-		<!-- icons -->
- <img src="icons/skip_previous_FILL0_wght400_GRAD0_opsz48.svg" alt="">
- <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg" alt="" id="masterPlay">
- <img src="icons/skip_next_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+		<input type="range" name="range" id="progressBar" min="0" max="100">
+		<div class="icons">
+			<!-- icons -->
+			<img src="icons/fast-backward.png" alt="">
+			<img src="icons/play-button.png" alt="" id="masterPlay">
+			<img src="icons/fast-forward-button.png" alt="">
 
 
+		</div>
+		<div class="songInfo">
+			<img src="./images/playing.gif" width="42px" alt="" id="gif"> <span
+				id="masterSongName">Apocalypse</span>
+		</div>
 	</div>
-	<div class="songInfo">
-		  <img src="./images/playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Apocalypse</span>
-	</div>
-</div>
 
 	<script src="js/script.js"></script>
 </body>
+
 </html>
