minor changes added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="songItem">
 				<img src="images/app.jpg" alt="" srcset="">
 				<span>Apocalypse </span>
-				<span class="songListPlay"> <img src="icons/play_circle_FILL0_wght400_GRAD0_opsz48.svg"
+				<span class="songListPlay"> <img src="icons/play-button.png"
 						alt=""></span>
 			</div>
 		</div>
