--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 	<div class="bottom">
 
-		<input type="range" name="range" id="progressBar" min="0" max="100">
+		<input type="range" name="range" id="progressBar" min="0" max="100" value="0">
 		<div class="icons">
 			<!-- icons -->
 			<img src="icons/fast-backward.png" alt="">
